syntax = "proto2";

option go_package = "godemo/models/protobuf_package/grpc;godemoGrpc";

import "employee.proto";
import "search.proto";

// grpc服务
service GodemoService {

    // 获取职员信息
    rpc getEmployeeInfo (EmployeeRequest) returns (EmployeeResponse) {

    }

    // 搜索请求
    rpc search (searchRequest) returns (searchResponse) {

    }

}
